starting to fix the horizontal scrolling issues

--- a/src/_css/main.css
+++ b/src/_css/main.css
@@ -1,4 +1,4 @@
-@import '@coopdigital/css-foundations';
+@import '@coopdigital/css-foundations/dist/foundations.css';
 
 /* Components */
 @import '@coopdigital/component-skipnav';
@@ -21,7 +21,6 @@ body {
   padding: 0;
   margin: 0;
 }
-
 
 /* a few demo styles */
 .coop-u-flex__sidebar {
@@ -286,7 +285,7 @@ html {
   scroll-behavior: smooth;
 }
 
-.nested-link{
+.nested-link {
   margin-top: var(--spacing-8);
   margin-bottom: var(--spacing-8);
   font-weight: 400;
@@ -303,10 +302,8 @@ html {
   margin-bottom: var(--spacing-8);
 }
 
-.section-background{
+.section-background {
   background-color: var(--color-grey-neutral-cool-light);
-  margin-left: 48px;
   padding-left: 32px;
   margin-top: 32px;
 }
-
